syntax = "proto3";

                 package clearanceDeclarationContainer;
service ClearanceDeclarationContainerService {
 rpc createClearanceDeclarationContainer (ClearanceDeclarationContainerCreateInput) returns (ClearanceDeclarationContainer) {}
rpc clearanceDeclarationContainers (findManyParams) returns (stream ClearanceDeclarationContainer) {}
rpc clearanceDeclarationContainer (ClearanceDeclarationContainerWhereUniqueInput) returns (ClearanceDeclarationContainer) {}
rpc updateClearanceDeclarationContainer (ClearanceDeclarationContainerUpdateInput) returns (ClearanceDeclarationContainer) {}
rpc deleteClearanceDeclarationContainer (ClearanceDeclarationContainerWhereUniqueInput) returns (ClearanceDeclarationContainer) {} 
 }
message ClearanceDeclarationContainerCreateInput {
string cntrNo = 1;
int32 cntrSrno = 2;
string cntrStfnSttsCd = 3;
string cntrTpCd = 4;
string createdAt = 5;
string delYn = 6;
string frstRegstId = 7;
string frstRgsrDttm = 8;
string id = 9;
string inscTrgtYn = 10;
string lastChgDttm = 11;
string lastChprId = 12;
int32 mdfyDgcnt = 13;
string reffNo = 14;
string sealChpn1 = 15;
string sealChpn2 = 16;
string sealChpn3 = 17;
string sealChpnCd = 18;
string sealNo1 = 19;
string sealNo2 = 20;
string sealNo3 = 21;
string updatedAt = 22;
};
message ClearanceDeclarationContainer {
string cntrNo = 1;
int32 cntrSrno = 2;
string cntrStfnSttsCd = 3;
string cntrTpCd = 4;
string createdAt = 5;
string delYn = 6;
string frstRegstId = 7;
string frstRgsrDttm = 8;
string id = 9;
string inscTrgtYn = 10;
string lastChgDttm = 11;
string lastChprId = 12;
int32 mdfyDgcnt = 13;
string reffNo = 14;
string sealChpn1 = 15;
string sealChpn2 = 16;
string sealChpn3 = 17;
string sealChpnCd = 18;
string sealNo1 = 19;
string sealNo2 = 20;
string sealNo3 = 21;
string updatedAt = 22;
};
message ClearanceDeclarationContainerWhereUniqueInput {
string cntrNo = 1;
int32 cntrSrno = 2;
string cntrStfnSttsCd = 3;
string cntrTpCd = 4;
string createdAt = 5;
string delYn = 6;
string frstRegstId = 7;
string frstRgsrDttm = 8;
string id = 9;
string inscTrgtYn = 10;
string lastChgDttm = 11;
string lastChprId = 12;
int32 mdfyDgcnt = 13;
string reffNo = 14;
string sealChpn1 = 15;
string sealChpn2 = 16;
string sealChpn3 = 17;
string sealChpnCd = 18;
string sealNo1 = 19;
string sealNo2 = 20;
string sealNo3 = 21;
string updatedAt = 22;
};
message ClearanceDeclarationContainerUpdateInput {
string cntrNo = 1;
int32 cntrSrno = 2;
string cntrStfnSttsCd = 3;
string cntrTpCd = 4;
string createdAt = 5;
string delYn = 6;
string frstRegstId = 7;
string frstRgsrDttm = 8;
string id = 9;
string inscTrgtYn = 10;
string lastChgDttm = 11;
string lastChprId = 12;
int32 mdfyDgcnt = 13;
string reffNo = 14;
string sealChpn1 = 15;
string sealChpn2 = 16;
string sealChpn3 = 17;
string sealChpnCd = 18;
string sealNo1 = 19;
string sealNo2 = 20;
string sealNo3 = 21;
string updatedAt = 22;
};
message findManyParams {

};